# CodingPractice

./: .gitignore  LICENSE
99Problems/lisp/: README.md
99Problems/rust/: README.md
AOC/aoc2020/: .gitignore  Cargo.toml
AOC/aoc2021/: pyproject.toml
AOC/aoc2021/aoc2021/: main.py  utils.py
AOC/aoc2021/aoc2021/day01/: main.py
AOC/aoc2021/aoc2021/day02/: main.py
AOC/aoc2021/aoc2021/day03/: main.py
AOC/aoc2021/aoc2021/day04/: main.py
AOC/aoc2021/aoc2021/day05/: main.py
AOC/aoc2021/aoc2021/day06/: main.py
AOC/aoc2021/aoc2021/inputs/: __init__.py
AOC/aoc2021/aoc2021/solver/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
AOC/aoc2021/aoc2021/template/: solver.py
AOC/aoc2021/aoc2021/template/day/: main.py
AOC/aoc2021/tests/: test_aoc.py  test_day8.py  test_day9.py  test_utils.py
AOC/aoc2023/: day06.ipynb  pyproject.toml
AOC/aoc2023/.ipynb_checkpoints/: day06-checkpoint.ipynb
AOC/aoc2023/aoc2023/: cli.py  day.template  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py
AOC/aoc2023/files/test/: day12-double.in  day12-dp.in  day12-single.in
AOC/aoc2023/tests/: test_day16.py
AOC/aoc2024/: aoc2024.py  cli.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day16.py  day17.py  day18.py  day19.py  pyproject.toml  template.py
AOC/aoc2025/: pyproject.toml
AOC/aoc2025/src/aoc2025/: day.template  day01.py  main.py
AOC/aoc2025/src/aoc2025/test/: test_main.py
CodinGame/: README.md
CodinGame/BotProgramming/: coders-strike-back.py  fall-challenge-2020.py  ghost-in-the-cell.py
CodinGame/ClassicPuzzleEasy/: 1d-spreadsheet.py  a-childs-play.py  abcdefghijklmnopqrstuvwxyz.ml  ascii-art-the-drunken-bishop-algorithm.py  ascii-art.py  asteroids.py  asteroids.rs  bank-robbers.py  bank-robbers.ts  brackets-extreme-edition.py  chuck-norris.py  city-lights-part-1.rs  create-the-longest-sequence-of-1s.cs  create-the-longest-sequence-of-1s.py  custom-game-of-life.py  defibrillators.py  detective-pikaptcha-ep1.java  detective-pikaptcha-ep2.py  dungeons-and-maps.py  encryptiondecryption-of-enigma-machine.py  equivalent-resistance-circuit-building.py  ghost-legs.py  graffiti-on-the-fence.py  happy-numbers.ml  hooch-clash.py  (+26 more)
ProjectEuler/: README.md
(+41 files in other folders)
