[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Martin Courtois <martin.courtois@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
day01 = 'aoc2023.day01:main'
day02 = 'aoc2023.day02:main'
day03 = 'aoc2023.day03:main'
day04 = 'aoc2023.day04:main'