[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Martin Courtois <martin.courtois@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
day01 = 'aoc2023.day01:main'
day02 = 'aoc2023.day02:main'
day03 = 'aoc2023.day03:main'
day04 = 'aoc2023.day04:main'
day05 = 'aoc2023.day05:main'
day06 = 'aoc2023.day06:main'
day07 = 'aoc2023.day07:main'
