[project]
name = "aoc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin", email = "martin.courtois@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
aoc2025 = "aoc2025.main:main"
aoc2025-template = "aoc2025.main:template"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
